Need helping aligning some content center
Molli, help! Need help aligning stuff in the middle of the page.

--- a/css/main.css
+++ b/css/main.css
@@ -224,6 +224,9 @@ footer {
 footer li {
 	font-size: 100%;
 	text-align: center;
+	list-style-type: none;
+	font-family: 'Oswald', sans-serif;
+	font-weight: 400;
 }
 
 footer p {
