--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@
 	height: 962px;
 	background-size: 100%;
 	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .index-content {
@@ -39,10 +40,6 @@ h1 {
 	font-size: 250%;
 	line-height:;
 	color: #b8f0d9;
-	text-align: center;
-}
-
-.spce-title {
 	margin-bottom: 25px;
 }
 
@@ -52,7 +49,6 @@ p {
 	font-size: 100%;
 	line-height: 200%;
 	color:#3e354e;
-	text-align: center;
 }
 
 h2 {	
@@ -61,7 +57,6 @@ h2 {
 	font-size: 200%;
 	line-height:;
 	color: #B8F0D9;
-	text-align: center;
 }
 
 .spce-subtitle {
@@ -90,7 +85,6 @@ h3 {
 	font-size: 150%;
 	line-height:;
 	color: #B8F0D9;
-	text-align: center;
 }
 
 ul {
@@ -103,7 +97,6 @@ nav {
 	font-family: 'Oswald', sans-serif;
 	font-weight: 400;
 	padding-top: 40px;
-	text-align: center;
 }
 
 .call-out {
@@ -111,7 +104,6 @@ nav {
 	font-family: 'Oswald', sans-serif;
 	font-weight: 300;
 	color: #3e354e;
-	text-align: center;
 }
 
 a {
@@ -231,6 +223,7 @@ footer li {
 
 footer p {
 	margin: 0;
+	text-align: center;
 }
 
 header {
