--- a/css/main.css
+++ b/css/main.css
@@ -24,12 +24,6 @@
 	padding-top: 50px;
 }
 
-.wrapper {
-	margin: 20%;
-	margin-top: 0;
-	margin-bottom: 0;
-}
-
 .logo {
 	max-width: 200px;
 }
@@ -70,8 +64,15 @@ ol {
 	line-height:;
 }
 
+nav {
+	font-family: 'Oswald', sans-serif;
+	font-weight: 400;
+	padding-top: 40px;
+}
+
 nav li {
 	font-family: 'Oswald', sans-serif;
+	font-weight: 400;
 	font-size: 28px;
 	line-height:;
 	list-style-type: none;
@@ -88,21 +89,26 @@ h3 {
 }
 
 ul {
-	font-family:;
+	font-family: 'Merriweather', serif;
+	font-weight: 300;
+	list-style-type: square;
 	font-size:;
 	line-height:;
 }
 
-nav {
-	font-family: 'Oswald', sans-serif;
-	font-weight: 400;
-	padding-top: 40px;
-}
+
 
 .call-out {
 	font-size: 150%;
 	font-family: 'Oswald', sans-serif;
-	font-weight: 300;
+	font-weight: 700;
+	color: #3e354e;
+}
+
+.call-out p {
+	font-size: 150%;
+	font-family: 'Oswald', sans-serif;
+	font-weight: 700;
 	color: #3e354e;
 }
 
