--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,38 @@
 @import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
 @import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700|Merriweather:400italic,400,900,300italic,300,700,700italic,900italic);
 
+label {
+  font-size: 0.875rem;
+  color: red;
+  cursor: pointer;
+  display: block;
+  font-weight: normal;
+  line-height: 1.5;
+  margin-bottom: 0;
+}
+
+input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea {
+  -webkit-appearance: none;
+  border-radius: 0;
+  background-color: #FFFFFF;
+  font-family: inherit;
+  border-style: solid;
+  border-width: 1px;
+  border-color: blue;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  color: rgba(0, 0, 0, 0.75);
+  display: block;
+  font-size: 0.875rem;
+  margin: 0 0 1rem 0;
+  padding: 0.5rem;
+  height: 2.3125rem;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  transition: all 0.15s linear;
+}
+
 /* This is so the browser will know how to size the content, adjusts automatically keeps boxes within rows*/
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
@@ -95,8 +127,6 @@ ul {
 	font-size:;
 	line-height:;
 }
-
-
 
 .call-out {
 	font-size: 150%;
@@ -234,3 +264,30 @@ footer p {
 
 header {
 }
+
+// Small screens
+@media only screen { 
+
+.hero-space {
+	height:700px;
+	background-position: 0 500px;
+}
+} /* Define mobile styles */
+
+@media only screen and (max-width: 40em) { 
+
+.hero-space {
+	height: 700px;
+	background-position: 0 500px;
+}
+
+p {
+	font-size: 85%;
+}
+
+} /* max-width 640px, mobile-only styles, use when QAing mobile issues */
+
+// Medium screens
+@media only screen and (min-width: 40.063em) { } /* min-width 641px, medium screens */
+
+@media only screen and (min-width: 40.063em) and (max-width: 64em) { } /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
