changed color of horizontal rules
color change dark blue to cranberry* looks nicer i think, there was way
too much dark blue

--- a/css/main.css
+++ b/css/main.css
@@ -236,8 +236,8 @@ html span {
 hr {
 	width: 100%;
 	height: 1px;
-	background-color: #3e354e;
-	color: #3e354e;
+	background-color: #b82265;
+	color: #b82265;
 	border: 0 none;
 	margin-left: auto;
 	margin-right: auto;
