--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,15 @@
 	background-image: url(../img/background-mission-statement.svg);
 	background-repeat: no-repeat;
 	background-position: center;
-	background-size: 100%;
+	background-position: top;
+	background-size: 60%;
+	padding-top: 90px;
+	padding-bottom: 320px;
 	/*padding-top: 500px;*/
 }
 
 .keywords {
-	padding-top: 200px;
+	padding-top: 30px;
 	padding-bottom: 200px;
 }
 
@@ -29,21 +32,21 @@
 
 .keyword-01 {
 	float: left;
-	background-image: url(../img/background-safe-word-03.svg);
+	background-image: url(../img/background-safe-word-02.svg);
 	background-repeat: no-repeat;
 	background-size: 100%;
 }
 
 .keyword-02 {
 	float: left;
-	background-image: url(../img/background-safe-word-02.svg);
+	background-image: url(../img/background-safe-word-03.svg);
 	background-repeat: no-repeat;
 	background-size: 100%;
 }
 
 .keyword-03 {
 	float: left;
-	background-image: url(../img/background-safe-word-03.svg);
+	background-image: url(../img/background-safe-word-02.svg);
 	background-repeat: no-repeat;
 	background-size: 100%;
 }
