--- a/css/main.css
+++ b/css/main.css
@@ -56,27 +56,28 @@
 }
 
 label {
-  font-size: 0.875rem;
-  color: red;
+  font-family: 'Oswald', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	color: #b8f0d9;
   cursor: pointer;
   display: block;
-  font-weight: normal;
-  line-height: 1.5;
+  line-height: 2.5;
   margin-bottom: 0;
 }
 
 input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea {
   -webkit-appearance: none;
-  border-radius: 0;
   background-color: #FFFFFF;
-  font-family: inherit;
+  font-family: 'Merriweather', serif;
+	font-weight: 300;
+	font-size: 16px;
+	color:#3e354e;
   border-style: solid;
   border-width: 1px;
-  border-color: blue;
+  border-color: #b82265;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-  color: rgba(0, 0, 0, 0.75);
   display: block;
-  font-size: 0.875rem;
   margin: 0 0 1rem 0;
   padding: 0.5rem;
   height: 2.3125rem;
