--- a/css/main.css
+++ b/css/main.css
@@ -4,148 +4,15 @@
 @import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
 @import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700|Merriweather:400italic,400,900,300italic,300,700,700italic,900italic);
 
-
-/*background images*/
-.mission-statement {
-	background-image: url(../img/background-mission-statement.svg);
-	background-repeat: no-repeat;
-	background-position: center;
-	background-position: top;
-	background-size: 60%;
-	padding-top: 90px;
-	padding-bottom: 320px;
-	/*padding-top: 500px;*/
-}
-
-.keywords {
-	padding-top: 30px;
-	padding-bottom: 200px;
-	background-image: url(../img/background-safe-word.svg);
-	background-repeat: no-repeat;
-}
-
-.keywords p {
-	font-size: 40px;
-	font-family: 'Oswald', sans-serif;
-	font-weight: 700;
-	color: #3e354e;
-	padding-bottom: 50px;
-}
-
-.keyword-01 {
-	float: left;
-	/*background-image: url(../img/background-safe-word-02.svg);*/
-	background-repeat: no-repeat;
-	background-size: 100%;
-	padding-left: 170px;
-}
-
-.keyword-02 {
-	float: left;
-	/*background-image: url(../img/background-safe-word-03.svg);*/
-	background-repeat: no-repeat;
-	background-size: 100%;
-	padding-top: 40px;
-}
-
-.keyword-03 {
-	float: left;
-	/*background-image: url(../img/background-safe-word-02.svg);*/
-	background-repeat: no-repeat;
-	background-size: 100%;
-}
-
-label {
-  font-family: 'Oswald', sans-serif;
-	font-weight: 400;
-	font-size: 16px;
-	color: #b8f0d9;
-  cursor: pointer;
-  display: block;
-  line-height: 2.5;
-  margin-bottom: 0;
-}
-
-input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea {
-  -webkit-appearance: none;
-  background-color: #FFFFFF;
-  font-family: 'Merriweather', serif;
-	font-weight: 300;
-	font-size: 16px;
-	color:#3e354e;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #b82265;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-  display: block;
-  margin: 0 0 1rem 0;
-  padding: 0.5rem;
-  height: 2.3125rem;
-  width: 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  transition: all 0.15s linear;
-}
-
-/* This is so the browser will know how to size the content, adjusts automatically keeps boxes within rows*/
+/*This is so the browser will know how to size the content, adjusts automatically keeps boxes within rows.*/
 *, *:before, *:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-.hero-space {
-	background: url(../img/spce-hero-home.jpg);
-	width: 100%;
-	height: 962px;
-	background-size: 100%;
-	background-position: center;
-	background-repeat: no-repeat;
-}
-
-.index-content {
-	padding-top: 50px;
-}
-
-.logo {
-	max-width: 200px;
-}
-
-h1 {
-	font-family: 'Oswald', sans-serif;
-	font-weight: 400;
-	font-size: 250%;
-	line-height:;
-	color: #b8f0d9;
-	margin-bottom: 25px;
-}
-
-p {
-	font-family: 'Merriweather', serif;
-	font-weight: 300;
-	font-size: 100%;
-	line-height: 200%;
-	color:#3e354e;
-}
-
-h2 {	
-	font-family: 'Oswald', sans-serif;
-	font-weight: 400;
-	font-size: 200%;
-	line-height:;
-	color: #B8F0D9;
-}
-
-.spce-subtitle {
-	margin-top: 25px;
-	margin-bottom: 25px;
-}
-
-ol {
-	font-family:;
-	font-size:;
-	line-height:;
+/*navigation items*/
+header {
 }
 
 nav {
@@ -164,6 +31,33 @@ nav li {
 	padding: 12px;
 }
 
+nav ul {
+	margin-left: 0;
+}
+
+/*This keeps the logo a consistant size*/
+.logo {
+	max-width: 200px;
+}
+
+/*headers*/
+h1 {
+	font-family: 'Oswald', sans-serif;
+	font-weight: 400;
+	font-size: 250%;
+	line-height:;
+	color: #b8f0d9;
+	margin-bottom: 25px;
+}
+
+h2 {	
+	font-family: 'Oswald', sans-serif;
+	font-weight: 400;
+	font-size: 200%;
+	line-height:;
+	color: #B8F0D9;
+}
+
 h3 {
 	font-family: 'Oswald', sans-serif;
 	font-weight: 400;
@@ -172,6 +66,141 @@ h3 {
 	color: #B8F0D9;
 }
 
+/*background image for mission statement*/
+.mission-statement {
+	background-image: url(../img/background-mission-statement.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-position: top;
+	background-size: 60%;
+	padding-top: 90px;
+	padding-bottom: 450px;
+	/*padding-top: 500px;*/
+}
+
+/*key words*/
+.keywords {
+	padding-top: 30px;
+	padding-bottom: 200px;
+	background-image: url(../img/background-safe-word.svg);
+	background-repeat: no-repeat;
+}
+
+.keywords p {
+	font-size: 40px;
+	font-family: 'Oswald', sans-serif;
+	font-weight: 700;
+	color: #3e354e;
+	padding-bottom: 50px;
+}
+
+/*key word supportive*/
+.keyword-01 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-02.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+	padding-left: 170px;
+}
+
+.keyword-01 p {
+	color: #b82265;
+}
+
+/*key word inclusive*/
+.keyword-02 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-03.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+	padding-top: 40px;
+}
+
+.keyword-02 p {
+	color: #b8f0d9;
+}
+
+/*key word education*/
+.keyword-03 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-02.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+	margin-left: -190px;
+}
+
+.keyword-03 p {
+	color: #b82265;
+}
+
+/*form items*/
+label {
+	font-family: 'Oswald', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	color: #b8f0d9;
+	cursor: pointer;
+	display: block;
+	line-height: 2.5;
+	margin-bottom: 0;
+}
+
+input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea {
+	-webkit-appearance: none;
+	background-color: #FFFFFF;
+	font-family: 'Merriweather', serif;
+	font-weight: 300;
+	font-size: 16px;
+	color:#3e354e;
+ 	border-style: solid;
+	border-width: 1px;
+	border-color: #b82265;
+	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+	display: block;
+	margin: 0 0 1rem 0;
+	padding: 0.5rem;
+	height: 2.3125rem;
+	width: 100%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	transition: all 0.15s linear;
+}
+
+/*home page background image*/
+.hero-space {
+	background: url(../img/spce-hero-home.jpg);
+	width: 100%;
+	height: 962px;
+	background-size: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+.index-content {
+	padding-top: 50px;
+}
+
+.visit-spce {
+	padding-top: 100px;
+}
+
+/*paragraph styles*/
+p {
+	font-family: 'Merriweather', serif;
+	font-weight: 300;
+	font-size: 100%;
+	line-height: 200%;
+	color:#3e354e;
+	margin-bottom: 0px;
+}
+
+.spce-subtitle {
+	margin-top: 25px;
+	margin-bottom: 25px;
+}
+
+/*list styles*/
 ul {
 	font-family: 'Merriweather', serif;
 	font-weight: 300;
@@ -181,19 +210,20 @@ ul {
 }
 
 .call-out {
-	font-size: 150%;
 	font-family: 'Oswald', sans-serif;
 	font-weight: 700;
-	color: #3e354e;
+	color: #b8f0d9;
+}
+
+.call-out span {
+	font-size: 150%;
 }
 
 .call-out p {
-	font-size: 150%;
-	font-family: 'Oswald', sans-serif;
-	font-weight: 700;
-	color: #3e354e;
+	font-size: 100%;
 }
 
+/*Link hovers*/
 a {
 	color: #83d2e4;
 }
@@ -202,22 +232,7 @@ a:hover, a:focus {
 	color: #b82265;
 }
 
-.button {
-	font-family: 'Oswald', sans-serif;
-	font-weight: 400;
-	background-color: #3e354e;
-	padding: 10px 50px 10px 50px;
-}
-
-.button:hover {
-	background-color: #b8f0d9;
-	border-right: solid;
-	border-bottom: solid;
-	border-color: #3e354e;
-	color: #3e354e;
-}
-
-/* parallel button*/
+/* parallel button start*/
 .btn {
 	font-family: 'Oswald', sans-serif;
 	font-weight: 400;
@@ -227,39 +242,6 @@ a:hover, a:focus {
 	font-size:1.2em;
 	padding:.5em 2em;
 	text-decoration:none;
-}
-
-.parallelogram{
-	transform: skew(-20deg);
-  
-}
-
-.skew-fix{
-	display:inline-block;
-	transform: skew(20deg);
-}
-
-/* pulled from http://codepen.io/kjbrum/pen/wBBLXx */
-html *,
-html *:before,
-html *:after {
-	box-sizing: border-box;
-	-webkit-transition: 0.5s;
-	transition: 0.5s;
-}
-html i, html em,
-html b, html strong,
-html span {
-	-webkit-transition: none;
-	transition: none;
-}
-
-*:before,
-*:after {
-	z-index: -1;
-}
-
-.btn {
 	position: relative;
 	display: inline-block;
 	overflow: hidden;
@@ -277,12 +259,66 @@ html span {
 	top: 0;
 	left: 0;
 }
+
 .btn:hover {
 	color: #83d2e4;
 	border-style: solid;
 }
+
 .btn:hover:after {
 	border-width: 330px 330px 0 0;
+}
+
+.parallelogram{
+	transform: skew(-20deg);
+  
+}
+
+.skew-fix{
+	display:inline-block;
+	transform: skew(20deg);
+}
+
+html *,
+html *:before,
+html *:after {
+	box-sizing: border-box;
+	-webkit-transition: 0.5s;
+	transition: 0.5s;
+}
+
+html i, html em,
+html b, html strong,
+html span {
+	-webkit-transition: none;
+	transition: none;
+}
+
+*:before,
+*:after {
+	z-index: -1;
+}
+/*parallel button end*/
+
+/*footer items*/
+footer {
+	margin: 30px 0px 10px 0px;
+}
+
+footer li {
+	font-size: 100%;
+	text-align: center;
+	list-style-type: none;
+	font-family: 'Oswald', sans-serif;
+	font-weight: 400;
+}
+
+footer ul {
+	margin: 10px 0 10px 0;
+}
+
+footer p {
+	margin: 0;
 }
 
 hr {
@@ -297,40 +333,26 @@ hr {
 	margin-bottom: 10px;
 }
 
-footer {
-	margin: 30px 0px 10px 0px;
-}
-
-footer li {
-	font-size: 100%;
-	text-align: center;
-	list-style-type: none;
-	font-family: 'Oswald', sans-serif;
-	font-weight: 400;
-}
-
-footer p {
-	margin: 0;
-	text-align: center;
-}
-
-header {
-}
-
+/*Styles specific to small screen sizes*/
 // Small screens
 @media only screen { 
 
 .hero-space {
-	height:700px;
-	background-position: 0 500px;
+	height: 710px;
+	background-position: 0 475px;
 }
+
+p {
+	font-size: 85%;
+}
+
 } /* Define mobile styles */
 
 @media only screen and (max-width: 40em) { 
 
 .hero-space {
-	height: 700px;
-	background-position: 0 500px;
+	height: 710px;
+	background-position: 0 475px;
 }
 
 p {
@@ -339,7 +361,103 @@ p {
 
 } /* max-width 640px, mobile-only styles, use when QAing mobile issues */
 
+/*Styles specific to medium screen sizes*/
 // Medium screens
-@media only screen and (min-width: 40.063em) { } /* min-width 641px, medium screens */
+@media only screen and (min-width: 40.063em) {
+	
+.hero-space {
+	height: 700px;
+	background-position: 0 175px;
+}
 
-@media only screen and (min-width: 40.063em) and (max-width: 64em) { } /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
+/*background image for mission statement*/
+.mission-statement {
+	background-image: url(../img/background-mission-statement.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-position: top;
+	background-size: 60%;
+	padding-top: 90px;
+	padding-bottom: 0px;
+}
+
+/*key word supportive*/
+.keyword-01 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-02.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+	padding-left: 170px;
+}
+
+/*key word inclusive*/
+.keyword-02 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-03.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+	padding-top: 40px;
+}
+
+/*key word education*/
+.keyword-03 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-02.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+	
+} /* min-width 641px, medium screens */
+
+@media only screen and (min-width: 40.063em) and (max-width: 64em) {
+	
+.hero-space {
+	height: 700px;
+	background-position: 0 175px;
+}
+
+/*background image for mission statement*/
+.mission-statement {
+	background-image: url(../img/background-mission-statement.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-position: top;
+	background-size: 60%;
+	padding-top: 90px;
+	padding-bottom: 250px;
+}
+
+.keywords {
+	padding-top: 30px;
+	padding-bottom: 75px;
+	background-image: url(../img/background-safe-word.svg);
+	background-repeat: no-repeat;
+
+/*key word supportive*/
+.keyword-01 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-02.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+	padding-left: 170px;
+	margin-bottom: 300px;
+}
+
+/*key word inclusive*/
+.keyword-02 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-03.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+	padding-top: 40px;
+}
+
+/*key word education*/
+.keyword-03 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-02.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+	
+} /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
