--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,7 @@ h2 {
 	color: #B8F0D9;
 }
 
+/*delete this h3 if we don't have any within the html*/
 h3 {
 	font-family: 'Oswald', sans-serif;
 	font-weight: 400;
@@ -346,6 +347,74 @@ p {
 	font-size: 85%;
 }
 
+h1 {
+	font-size: ;
+}
+
+h2 {	
+	font-size: ;
+}
+
+ul {
+	
+}
+
+.call-out {
+
+}
+
+.call-out span {
+	font-size: ;
+}
+
+.call-out p {
+	font-size: ;
+}
+
+/*background image for mission statement*/
+.mission-statement {
+	background-image: url(../img/background-mission-statement.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-position: top;
+	background-size: 60%;
+	padding-top: 90px;
+	padding-bottom: 100px;
+}
+
+/*key word supportive*/
+.keyword-01 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-02.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+	padding-left: 170px;
+}
+
+/*key word inclusive*/
+.keyword-02 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-03.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+	padding-top: 40px;
+}
+
+/*key word education*/
+.keyword-03 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-02.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+
+.keywords {
+	padding-top: 30px;
+	padding-bottom: 0px;
+	background-image: url(../img/background-safe-word.svg);
+	background-repeat: no-repeat;
+}
+
 } /* Define mobile styles */
 
 @media only screen and (max-width: 40em) { 
@@ -357,6 +426,74 @@ p {
 
 p {
 	font-size: 85%;
+}
+
+h1 {
+	font-size: ;
+}
+
+h2 {	
+	font-size: ;
+}
+
+ul {
+	
+}
+
+.call-out {
+
+}
+
+.call-out span {
+	font-size: ;
+}
+
+.call-out p {
+	font-size: ;
+}
+
+/*background image for mission statement*/
+.mission-statement {
+	background-image: url(../img/background-mission-statement.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-position: top;
+	background-size: 60%;
+	padding-top: 90px;
+	padding-bottom: 100px;
+}
+
+/*key word supportive*/
+.keyword-01 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-02.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+	padding-left: 170px;
+}
+
+/*key word inclusive*/
+.keyword-02 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-03.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+	padding-top: 40px;
+}
+
+/*key word education*/
+.keyword-03 {
+	float: left;
+	/*background-image: url(../img/background-safe-word-02.svg);*/
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+
+.keywords {
+	padding-top: 30px;
+	padding-bottom: 0px;
+	background-image: url(../img/background-safe-word.svg);
+	background-repeat: no-repeat;
 }
 
 } /* max-width 640px, mobile-only styles, use when QAing mobile issues */
@@ -379,6 +516,13 @@ p {
 	background-size: 60%;
 	padding-top: 90px;
 	padding-bottom: 0px;
+}
+
+.keywords {
+	padding-top: 30px;
+	padding-bottom: 0px;
+	background-image: url(../img/background-safe-word.svg);
+	background-repeat: no-repeat;
 }
 
 /*key word supportive*/
@@ -429,9 +573,10 @@ p {
 
 .keywords {
 	padding-top: 30px;
-	padding-bottom: 75px;
+	padding-bottom: 0px;
 	background-image: url(../img/background-safe-word.svg);
 	background-repeat: no-repeat;
+}
 
 /*key word supportive*/
 .keyword-01 {
