--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,6 @@ nav li {
 	font-family: 'Oswald', sans-serif;
 	font-weight: 400;
 	font-size: 28px;
-	line-height:;
 	list-style-type: none;
 	display: inline;
 	padding: 12px;
@@ -45,7 +44,6 @@ h1 {
 	font-family: 'Oswald', sans-serif;
 	font-weight: 400;
 	font-size: 250%;
-	line-height:;
 	color: #b8f0d9;
 	margin-bottom: 25px;
 }
@@ -54,7 +52,6 @@ h2 {
 	font-family: 'Oswald', sans-serif;
 	font-weight: 400;
 	font-size: 200%;
-	line-height:;
 	color: #B8F0D9;
 }
 
@@ -63,7 +60,6 @@ h3 {
 	font-family: 'Oswald', sans-serif;
 	font-weight: 400;
 	font-size: 150%;
-	line-height:;
 	color: #B8F0D9;
 }
 
@@ -190,7 +186,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 p {
 	font-family: 'Merriweather', serif;
 	font-weight: 300;
-	font-size: 100%;
+	font-size: 16px;
 	line-height: 200%;
 	color:#3e354e;
 	margin-bottom: 0px;
@@ -206,14 +202,34 @@ ul {
 	font-family: 'Merriweather', serif;
 	font-weight: 300;
 	list-style-type: square;
-	font-size:;
-	line-height:;
+	padding-bottom: 30px;
 }
 
-.call-out {
+.head-call-out {
 	font-family: 'Oswald', sans-serif;
 	font-weight: 700;
 	color: #b8f0d9;
+	font-size: 30px;
+	line-height: 40px;
+}
+
+.subhead-call-out {
+	font-family: 'Oswald', sans-serif;
+	font-weight: 500;
+	color: #b8f0d9;
+	font-size: 24px;
+	line-height: 28px;
+	padding-top: 30px;
+	padding-bottom: 20px;
+}
+
+.list-head-call-out {
+	font-family: 'Oswald', sans-serif;
+	font-weight: 500;
+	color: #83d2e4;
+	font-size: 20px;
+	line-height: 28px;
+	padding-bottom: 20px;
 }
 
 .call-out span {
