--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ nav ul {
 h1 {
 	font-family: 'Oswald', sans-serif;
 	font-weight: 400;
-	font-size: 250%;
+	font-size: 50px;
 	color: #b8f0d9;
 	margin-bottom: 25px;
 }
@@ -55,13 +55,6 @@ h2 {
 	color: #B8F0D9;
 }
 
-/*delete this h3 if we don't have any within the html*/
-h3 {
-	font-family: 'Oswald', sans-serif;
-	font-weight: 400;
-	font-size: 150%;
-	color: #B8F0D9;
-}
 
 /*background image for mission statement*/
 .mission-statement {
@@ -94,9 +87,6 @@ h3 {
 /*key word supportive*/
 .keyword-01 {
 	float: left;
-	/*background-image: url(../img/background-safe-word-02.svg);*/
-	background-repeat: no-repeat;
-	background-size: 100%;
 	padding-left: 170px;
 }
 
@@ -107,30 +97,35 @@ h3 {
 /*key word inclusive*/
 .keyword-02 {
 	float: left;
-	/*background-image: url(../img/background-safe-word-03.svg);*/
-	background-repeat: no-repeat;
-	background-size: 100%;
 	padding-top: 40px;
 }
 
 .keyword-02 p {
 	color: #b8f0d9;
+	margin-left: -10px;
 }
 
 /*key word education*/
 .keyword-03 {
 	float: left;
-	/*background-image: url(../img/background-safe-word-02.svg);*/
-	background-repeat: no-repeat;
-	background-size: 100%;
 	margin-left: -190px;
 }
 
 .keyword-03 p {
-	color: #b82265;
+	color: #83d2e4;
+	margin-left: -6px;
 }
 
 /*form items*/
+
+.contact-form {
+	padding-top: 50px;
+}
+
+.contact-form ul {
+	list-style: none;
+}
+
 label {
 	font-family: 'Oswald', sans-serif;
 	font-weight: 400;
@@ -179,7 +174,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 }
 
 .visit-spce {
-	padding-top: 100px;
+	padding-top: 50px;
 }
 
 /*paragraph styles*/
@@ -198,6 +193,14 @@ p {
 }
 
 /*list styles*/
+
+.visit-spce ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+
 ul {
 	font-family: 'Merriweather', serif;
 	font-weight: 300;
@@ -240,7 +243,30 @@ ul {
 	font-size: 100%;
 }
 
+/* Bullet Styles */
+
+
+.about-spce ul li {
+  color:#444; /* set color of list item to a dark gray */
+	list-style:none; /* if you’re not already using a reset */
+}
+
+.about-spce ul li:before {
+  color:#B72265; /* set color to red */
+  content:"\2022"; /* /2022 is the numerical unicode for &bull; */
+  font-size:1.5em; /* set the font-size of the bullet if necessary. Make sure to use em or %*/
+  padding-right:.25em; /* give the bullet some padding from the text Make sure to use em*/
+  position:relative;
+    top:.1em; /* set the vertical position of the bullet if necessary. Make sure to use em or % */
+}
+
+
 /*Link hovers*/
+
+nav a {
+	line-height: 50px;
+}
+
 a {
 	color: #83d2e4;
 }
@@ -357,6 +383,7 @@ hr {
 .hero-space {
 	height: 710px;
 	background-position: 0 475px;
+	background-image: none;
 }
 
 p {
@@ -364,19 +391,30 @@ p {
 }
 
 h1 {
-	font-size: ;
+	font-size: 30px;
 }
 
 h2 {	
-	font-size: ;
+	font-size: 24px;
 }
 
-ul {
-	
+li {
+	font-size: 12px;
+	line-height: 18px;
 }
 
-.call-out {
+.head-call-out {
+	font-size: 20px;
+	line-height: 28px;
+}
 
+.subhead-call-out {
+	font-size: 20px;
+	font-weight: 500;
+}
+
+.list-head-call-out {
+	text-align: center;
 }
 
 .call-out span {
@@ -389,7 +427,7 @@ ul {
 
 /*background image for mission statement*/
 .mission-statement {
-	background-image: url(../img/background-mission-statement.svg);
+	background-image: none;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-position: top;
@@ -398,46 +436,28 @@ ul {
 	padding-bottom: 100px;
 }
 
-/*key word supportive*/
-.keyword-01 {
-	float: left;
-	/*background-image: url(../img/background-safe-word-02.svg);*/
-	background-repeat: no-repeat;
-	background-size: 100%;
-	padding-left: 170px;
-}
-
-/*key word inclusive*/
-.keyword-02 {
-	float: left;
-	/*background-image: url(../img/background-safe-word-03.svg);*/
-	background-repeat: no-repeat;
-	background-size: 100%;
-	padding-top: 40px;
-}
-
-/*key word education*/
-.keyword-03 {
-	float: left;
-	/*background-image: url(../img/background-safe-word-02.svg);*/
-	background-repeat: no-repeat;
-	background-size: 100%;
-}
-
 .keywords {
+	display: none;
 	padding-top: 30px;
 	padding-bottom: 0px;
 	background-image: url(../img/background-safe-word.svg);
 	background-repeat: no-repeat;
 }
 
+.spce-location {
+	padding:0;
+	margin: 0;
+}
+	
+
 } /* Define mobile styles */
 
 @media only screen and (max-width: 40em) { 
 
 .hero-space {
-	height: 710px;
+	height: 410px;
 	background-position: 0 475px;
+	background-image: none;
 }
 
 p {
@@ -445,44 +465,47 @@ p {
 }
 
 h1 {
-	font-size: ;
+	font-size: 30px;
 }
 
 h2 {	
-	font-size: ;
+	font-size: 24px;
 }
 
-ul {
-	
+li {
+	font-size: 12px;
+	line-height: 18px;
 }
 
-.call-out {
-
+.head-call-out {
+	font-size: 20px;
+	line-height: 28px;
+	padding-top: 20px;
 }
 
-.call-out span {
-	font-size: ;
+.subhead-call-out {
+	font-size: 20px;
+	font-weight: 500;
 }
 
-.call-out p {
-	font-size: ;
+.list-head-call-out {
+	text-align: center;
 }
 
 /*background image for mission statement*/
 .mission-statement {
-	background-image: url(../img/background-mission-statement.svg);
+	background-image: none;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-position: top;
 	background-size: 60%;
-	padding-top: 90px;
-	padding-bottom: 100px;
+	padding-top: 20px;
+	padding-bottom: 50px;
 }
 
 /*key word supportive*/
 .keyword-01 {
 	float: left;
-	/*background-image: url(../img/background-safe-word-02.svg);*/
 	background-repeat: no-repeat;
 	background-size: 100%;
 	padding-left: 170px;
@@ -491,7 +514,6 @@ ul {
 /*key word inclusive*/
 .keyword-02 {
 	float: left;
-	/*background-image: url(../img/background-safe-word-03.svg);*/
 	background-repeat: no-repeat;
 	background-size: 100%;
 	padding-top: 40px;
@@ -500,12 +522,12 @@ ul {
 /*key word education*/
 .keyword-03 {
 	float: left;
-	/*background-image: url(../img/background-safe-word-02.svg);*/
 	background-repeat: no-repeat;
 	background-size: 100%;
 }
 
 .keywords {
+	display: none;
 	padding-top: 30px;
 	padding-bottom: 0px;
 	background-image: url(../img/background-safe-word.svg);
@@ -535,6 +557,7 @@ ul {
 }
 
 .keywords {
+	display: none;
 	padding-top: 30px;
 	padding-bottom: 0px;
 	background-image: url(../img/background-safe-word.svg);
@@ -584,10 +607,11 @@ ul {
 	background-position: top;
 	background-size: 60%;
 	padding-top: 90px;
-	padding-bottom: 250px;
+	padding-bottom: 50px;
 }
 
 .keywords {
+	display: none;
 	padding-top: 30px;
 	padding-bottom: 0px;
 	background-image: url(../img/background-safe-word.svg);
