--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,8 @@ html span {
 /*parallel button end*/
 
 /*footer items*/
+
+
 footer {
 	margin: 30px 0px 10px 0px;
 }
@@ -331,7 +333,8 @@ footer li {
 }
 
 footer ul {
-	margin: 10px 0 10px 0;
+	padding: 0;
+	margin: 0;
 }
 
 footer p {
