contact form lists
finished setting up contact form lists

--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,14 @@ label {
 	margin-bottom: 0;
 }
 
+.contact-form {
+	padding-top: 50px;
+}
+
+.contact-form ul {
+	list-style: none;
+}
+
 input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea {
 	-webkit-appearance: none;
 	background-color: #FFFFFF;
